--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "MACRO"
 version = "3.12.0"
-description = "This is the code for a prototype demo Mars Cargo Rocer (MARCO)"
+description = "This is the code for a prototype demo Mars Cargo Rover (MARCO)"
 readme = "README.md"
 dependencies = []
